--- a/style.css
+++ b/style.css
@@ -63,6 +63,8 @@ main > .fundoParalax_2 {
     background-size: cover;
     color: white;
     padding: 10px 0px;
+    box-shadow: 0px 5px 10px inset rgba(0, 0, 0, 0.377);
+    
 }
 
 main > .fundoParalax_1 > p {
@@ -75,7 +77,7 @@ main > .fundoParalax_2 > p {
 
 footer {
     background-color: black;
-    color: white;
+    color: rgba(255, 255, 255, 0.842);
     text-align: center;
     padding: 5px;
     margin: 0%;
@@ -85,7 +87,7 @@ footer p {
     margin: 0%;
 }
 
-footer a {
+footer a, strong{
     text-decoration: none;
     color: white;
 }
